# recli

./: Cargo.toml  api.md  readme.md
src/: main.rs  tablet.rs
src/tablet/: remarkable_entry.rs
