[package]
name = "recli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.2.16", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["blocking"]}
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
# Filesystem access
# SSH client